# ndrwahltexte

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ndrwahltexte/: __init__.py  __main__.py  election.py  ndrwahltexte.py  params.py  robotext.py  text_generator.py  utils.py
ndrwahltexte/data/raw/: parteigrammatik.csv
ndrwahltexte/templates/: __init__.py  parties.py  party_grammar.py  shared_corrections.py
ndrwahltexte/templates/verhaeltniswahl/: __init__.py  corrections.py  endergebnis.py  kein_ergebnis.py  mit_ergebnis.py  zwischenergebnis.py
