[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndrwahltexte"
version = "0.1.0"
description = "Erstellt Fließtext basierend auf dem Wahlergebnis"
authors = [{ name = "Lalon Sander", email = "l.sander.fm@ndr.de" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
]

[project.scripts]
ndrwahltexte = "ndrwahltexte:ndrwahltexte"