[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndrwahltexte"
version = "0.3.0"
description = "Erstellt Fließtext basierend auf dem Wahlergebnis"
authors = [{ name = "Lalon Sander", email = "l.sander@ndr.de" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "simpleeval",
]

[project.scripts]
ndrwahltexte = "ndrwahltexte.ndrwahltexte:main"

[tool.hatch.build.targets.wheel]
packages = ["ndrwahltexte"]